# AutolystAI

./: .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_28_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: analysis.py  auth.py  chat.py  datasets.py  teams.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  analysis.py  base.py  conversation.py  dataset.py  team.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  dataset.py
backend/app/services/: __init__.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: layout.tsx
frontend/src/app/auth/account-type/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/dashboard/: auto-insights.tsx  dataset-interview.tsx
frontend/src/components/landing/: dual-audience.tsx  faq.tsx  features-grid.tsx  footer.tsx  hero.tsx  how-it-works.tsx  industry-use-cases.tsx  lifecycle-section.tsx  navbar.tsx  pricing.tsx  stats-bar.tsx  testimonials.tsx  what-if-simulator.tsx
frontend/src/components/providers/: auth-provider.tsx  communication-provider.tsx  theme-provider.tsx
frontend/src/components/ui/: animated-counter.tsx  button.tsx  logo.tsx  section.tsx  tooltip.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: auth-store.ts
(+10 files in other folders)
